@@ -3,6 +3,8 @@
   - Deprecated Mojolicious::Plugin::PODRenderer in favor of alternatives from
     CPAN.
   - Deprecated Mojo::Home::mojo_lib_dir.
+  - Replaced flash and validation methods in Mojolicious::Controller with
+    helpers in Mojolicious::Plugin::DefaultHelpers.
   - Updated FAQ with a warning not to use Perl 5.10.x and 5.12.x with
     Mojolicious.
 
